# ai-dev-swarm

./: .env.example  .gitignore  .mcp.example.json  LICENSE  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: verify.yml
alembic/: env.py
alembic/versions/: 20260525_0001_steering_notes.py  20260525_0002_milestone_sessions.py  20260529_0003_idea_evaluations.py  20260529_0004_milestone_ordinal_deferrable.py  20260529_0005_transcript_entries.py  20260529_0006_settings_overrides.py  20260529_0007_project_is_paused.py  20260530_0008_drop_idea_embeddings.py
ci/: audit_allowlist.txt  bandit.yml  generated_project_ci.yml  importlinter.ini  mutmut_thresholds.yml  verify_ship.py
docker/: Dockerfile  compose.yml  init.sql  phoenix.yml  run-ci.sh  sandbox.Dockerfile
docs/adr/: 0001-use-madr.md  0002-crewai-plus-custom-orchestrator.md  0003-claude-agent-sdk-for-developer.md  0004-psycopg3-over-psycopg2.md  0005-arize-phoenix-over-langsmith.md  0006-milestone-graph-state-machine.md  _template.md
examples/: README.md
examples/cli-port-finder/: README.md  spec.json  transcript.md
examples/markdown-toc/: README.md  spec.json  transcript.md
src/aidevswarm/: __init__.py  __main__.py  _time.py  bootstrap.py  logging_config.py  settings.py
src/aidevswarm/api/: __init__.py  server.py
src/aidevswarm/crews/: __init__.py  _llm.py  _parsing.py  _prompts.py  _spend.py  diagnostician.py  finance.py  protocols.py
src/aidevswarm/crews/ideation/: crew.py  novelty.py
src/aidevswarm/crews/ideation/prompts/: critic.txt  ideator.txt  trend_scout.txt
src/aidevswarm/crews/planning/: crew.py
src/aidevswarm/crews/planning/prompts/: architect.txt  pm.txt
src/aidevswarm/crews/replanning/: __init__.py  crew.py  protocols.py
src/aidevswarm/crews/replanning/prompts/: architect.txt  pm.txt
src/aidevswarm/db/: __init__.py  connection.py  pool.py  protocols.py  repositories.py  sessions.py  settings_store.py  transcript.py
src/aidevswarm/observability/: __init__.py  event_bridge.py  phoenix.py  redactor.py  tracing.py
src/aidevswarm/orchestrator/: __init__.py  auto_split.py  command_router.py  consolidation.py  orchestrator.py  scheduler.py  state_machine.py  tick.py
src/aidevswarm/schemas/: __init__.py  command.py  idea.py  milestone.py  novelty.py  project.py  replanner.py  session.py
src/aidevswarm/steering/: __init__.py  protocols.py  renderer.py  repository.py
src/aidevswarm/telegram/: __init__.py  bot.py  intent.py
src/aidevswarm/tools/: __init__.py  budget.py  claude_agent_sdk_tool.py  github_tool.py  kill_switch.py  mcp_config.py  memory.py  protocols.py  sandbox.py  telegram.py  workspace.py
src/aidevswarm/tools/sdk_prompts/: developer.txt  tester.txt
tests/: conftest.py  fakes.py
tests/integration/: conftest.py  test_api_server.py  test_auto_split.py  test_budget_gates.py  test_concurrent_projects.py  test_consolidation_cadence.py  test_diagnostician_on_failure.py  test_fizzbuzz_smoke.py  test_github_publish.py  test_integration_stage.py  test_mcp_smoke.py  test_milestone_sessions.py  test_pool_concurrent.py  test_reclaim_orphaned_building.py  test_replanner_actions.py  test_repositories.py  test_scope_guard.py  test_settings_override_repo.py  test_smoke_end_to_end.py  test_steering_repository.py  test_transcript_repo.py
tests/property/: test_budget_property.py  test_state_machine_no_stuck_cycles.py  test_state_machine_property.py  test_steering_renderer_property.py  test_workspace_property.py
tests/unit/: test_auto_split.py  test_bootstrap.py  test_budget.py  test_build_ci_repair.py  test_build_crew_review.py  test_command_router.py  test_command_router_settings.py  test_command_router_submit_idea.py  test_command_schema.py  test_consolidation.py  test_crew_parsing.py  test_decisions.py  test_diagnostician.py  test_event_bridge.py  test_finance_voice.py  test_github_tool.py  test_idea_evaluation.py  test_kill_switch.py  test_milestone_sessions.py  test_novelty.py  test_pool_safety_net.py  test_pool_transient_backoff.py  test_prompt_renderer.py  test_redactor.py  test_replanner_action.py  test_replanning_crew_helpers.py  test_sandbox.py  test_scheduler.py  test_schemas.py  test_sdk_tool_options.py  test_settings.py  test_settings_store.py  test_state_machine.py  test_steering_repository.py  test_telegram.py  test_telegram_bot.py  test_telegram_intent.py  test_transcript_publisher.py  test_workspace.py
ui/: app.js  index.html  styles.css
