[project]
name = "aidevswarm"
version = "0.0.1"
description = "Local autonomous multi-agent development system."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "ai-dev-swarm" }]

dependencies = [
  # Agent runtime + LLM
  "crewai>=0.86,<2.0",
  "claude-agent-sdk>=0.2.87",
  "anthropic>=0.40,<1.0",
  "litellm>=1.83.7,<2.0",

  # Persistence + cache
  "psycopg[binary,pool]>=3.2,<4.0",
  "pgvector>=0.3,<0.4",
  "redis>=5.0,<6.0",
  "alembic>=1.13,<2.0",

  # HTTP / control plane (Phase 5)
  "fastapi>=0.119,<1.0",
  "uvicorn[standard]>=0.32,<0.33",
  "httpx>=0.28,<0.29",
  "sse-starlette>=2.1,<3.0",

  # Telegram (one-way send in Phase 0; rich control in Phase 5)
  "python-telegram-bot>=21.6,<22.0",

  # Models + settings + logging + templating
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "structlog>=24.4,<25.0",
  "jinja2>=3.1,<4.0",

  # Observability (Arize Phoenix self-hosted + OpenInference CrewAI)
  "arize-phoenix-otel>=0.7,<1.0",
  "openinference-instrumentation-crewai>=1.1.4,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<10.0",
  "pytest-asyncio>=0.25,<2.0",
  "pytest-mock>=3.14,<4.0",
  "pytest-cov>=5.0,<6.0",
  "hypothesis>=6.110,<7.0",
  "ruff>=0.7,<0.8",
  "mypy>=1.13,<2.0",
  "types-redis>=4.6,<5.0",
  "types-requests>=2.32,<3.0",
  # Phase 3 verification gauntlet
  "bandit>=1.7,<2.0",
  "semgrep>=1.90,<2.0",
  "pip-audit>=2.7,<3.0",
  "safety>=3.2,<4.0",
  "mutmut>=2.5,<3.0",
  "radon>=6.0,<7.0",
  "xenon>=0.9,<1.0",
  "import-linter>=2.1,<3.0",
  "respx>=0.21,<1.0",
]

[project.scripts]
aidevswarm = "aidevswarm.__main__:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aidevswarm"]

# ----------------------------------------------------------------------------
# uv
# ----------------------------------------------------------------------------
[tool.uv]
package = true

# ----------------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["workspaces", ".venv", "phoenix_data"]

[tool.ruff.lint]
select = [
  "E", "F", "W",    # pyflakes + pycodestyle
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "SIM",            # simplify
  "RUF",            # ruff-specific
  "N",              # pep8-naming
  "ASYNC",          # async lint
  "TID",            # tidy imports
]
ignore = [
  "E501",   # line length is handled by formatter
  "N818",   # exception names without Error suffix are fine (RuntimeError sets the precedent)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------------------------------------------
# mypy --strict (per CLAUDE.md)
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
disallow_any_unimported = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
# CrewAI / LiteLLM publish partial or no type info; allow.
module = [
  "crewai",
  "crewai.*",
  "litellm",
  "litellm.*",
]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
  "integration: end-to-end smoke tests (slower; no external services required)",
  "slow: long-running tests",
  "anthropic: tests that call the live Anthropic API; require ANTHROPIC_API_KEY",
  "property: Hypothesis property-based tests (Phase 3 L4)",
  "network: tests that make outbound network calls; require AIDEVSWARM_NOVELTY_LIVE=1",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic.*",
  "ignore::DeprecationWarning:litellm.*",
]

[tool.coverage.run]
source = ["src/aidevswarm"]
branch = false
omit = [
  # Composition root — wired by the operator, exercised via docker compose up.
  "src/aidevswarm/orchestrator/orchestrator.py",
  "src/aidevswarm/__main__.py",
  # Phoenix bootstrap is best-effort and only exercised against a live container.
  "src/aidevswarm/observability/phoenix.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
